pvq-extension/procedural/tests/ui/extensions_impl/missing_impl_struct.stderr
error: Missing `#[extensions_impl::impl_struct]`
  --> tests/ui/extensions_impl/missing_impl_struct.rs:13:1
   |
13 | mod test_impl {
   | ^^^
